--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures { viewBinding true }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -31,13 +33,21 @@ android {
     }
 }
 
+def androidXNavigationFragmentVersion = '2.3.5'
+def androidXNavigationUIVersion = '2.3.5'
+
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:' + androidXNavigationFragmentVersion
+    implementation 'androidx.navigation:navigation-ui-ktx:' + androidXNavigationUIVersion
 }
